deploy/eks/argocd/base/infrastructure/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: infrastructure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.2.0
          args: ["start-dev", "--import-realm"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: keycloak-realm-config
              mountPath: /opt/keycloak/data/import/tinder-realm.json
              subPath: tinder-realm.json
      volumes:
        - name: keycloak-realm-config
          configMap:
            name: keycloak-realm-config
