deploy/eks/argocd/base/infrastructure/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: infrastructure
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - name: http
      protocol: TCP
      port: 8088
      targetPort: 8080
